--- a/Sumdays/app/src/main/AndroidManifest.xml
+++ b/Sumdays/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         android:theme="@style/Theme.First"
         android:usesCleartextTraffic="true"
         android:launchMode="singleTask">
+
         <activity
             android:name=".RegisterationActivity"
             android:screenOrientation="portrait"
@@ -83,6 +84,9 @@
         <activity android:name=".settings.LabsSettingsActivity"
             android:screenOrientation="portrait"
             android:exported="false" />
+        <activity android:name=".settings.ThemeSettingsActivity"
+            android:screenOrientation="portrait"
+            android:exported="false" />
 
         <activity
             android:name=".settings.StyleExtractionActivity"
@@ -118,5 +122,6 @@
 
 
     </application>
+
 
 </manifest>
